--- a/Front_End/Home Page.html
+++ b/Front_End/Home Page.html
@@ -117,7 +117,7 @@
 <!-- Contact -->
 <section id="contact" class="bg-light py-5 text-center">
     <h2>Contact Us</h2>
-    <p>Email: support@blooddonationsystem.com | Phone: +123 456 7890</p>
+    <p>Email: blooddonationms@gmail.com | Phone: +94 71 7500 753</p>
 </section>
 
 <!-- Footer -->
