--- a/Front_End/Patient Dashboard.html
+++ b/Front_End/Patient Dashboard.html
@@ -336,7 +336,7 @@
 
     document.getElementById("patientForm").addEventListener("submit", function(event) {
         event.preventDefault();
-        alert("Blood request submitted successfully!");
+        alert("Blood request submitted successfully...!");
     });
 </script>
 <!--<script>
