--- a/Front_End/About Us.html
+++ b/Front_End/About Us.html
@@ -19,13 +19,19 @@
     <p>"Give blood, save lives! Your donation makes a difference."</p>
 </section>
 
+
 <!-- Navbar -->
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
     <div class="container-fluid">
+        <!-- BrandName on the left -->
+        <a class="navbar-brand" href="#"><b>About Us</b></a>
+
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
             <span class="navbar-toggler-icon"></span>
         </button>
-        <div class="collapse navbar-collapse" id="navbarNav">
+
+        <!-- Links on the right -->
+        <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
             <ul class="navbar-nav ms-auto">
                 <li class="nav-item"><a class="nav-link" href="Home%20Page.html">Home</a></li>
                 <li class="nav-item"><a class="nav-link active" href="About%20Us.html">About Us</a></li>
