--- a/Front_End/Donor Dashboard.html
+++ b/Front_End/Donor Dashboard.html
@@ -32,11 +32,16 @@
 <!-- Navbar -->
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
     <div class="container-fluid">
+        <!-- BrandName on the left -->
+        <a class="navbar-brand" href="#"><b>Donor Dashboard</b></a>
+
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
             <span class="navbar-toggler-icon"></span>
         </button>
-        <div class="collapse navbar-collapse" id="navbarNav">
-            <ul class="navbar-nav ms-auto">
+
+        <!-- Links on the right -->
+        <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
+            <ul class="navbar-nav">
                 <li class="nav-item"><a class="nav-link" href="Home%20Page.html">Home</a></li>
                 <li class="nav-item"><a class="nav-link active" href="Donor%20Dashboard.html">Donor Dashboard</a></li>
                 <li class="nav-item"><a class="nav-link" href="#">Profile</a></li>
@@ -45,6 +50,7 @@
         </div>
     </div>
 </nav>
+
 
 <!-- Dashboard Content -->
 <div class="container mt-4">
