--- a/Front_End/Patients Requests.html
+++ b/Front_End/Patients Requests.html
@@ -44,10 +44,15 @@
 <!-- Navbar -->
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
     <div class="container-fluid">
+        <!-- BrandName on the left -->
+        <a class="navbar-brand" href="#"><b>Patient Requests</b></a>
+
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
             <span class="navbar-toggler-icon"></span>
         </button>
-        <div class="collapse navbar-collapse" id="navbarNav">
+
+        <!-- Links on the right -->
+        <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
             <ul class="navbar-nav ms-auto">
                 <li class="nav-item"><a class="nav-link" href="Hospital%20Dashboard.html">Hospital</a></li>
                 <li class="nav-item"><a class="nav-link active" href="Patients%20Requests.html">Patient Requests</a></li>
