--- a/Front_End/Hospital Dashboard.html
+++ b/Front_End/Hospital Dashboard.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Dashboard | Blood Donation System</title>
+    <title>Hospital Dashboard | Blood Donation System</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
     <style>
         .card {
@@ -40,10 +40,15 @@
 <!-- Navbar -->
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
     <div class="container-fluid">
+        <!-- BrandName on the left -->
+        <a class="navbar-brand"><b>Hospital Dashboard</b></a>
+
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
             <span class="navbar-toggler-icon"></span>
         </button>
-        <div class="collapse navbar-collapse" id="navbarNav">
+
+        <!-- Links on the right -->
+        <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
             <ul class="navbar-nav ms-auto">
                 <li class="nav-item"><a class="nav-link" href="Home%20Page.html ">Home</a></li>
                 <li class="nav-item"><a class="nav-link active" href="Hospital%20Dashboard.html">Hospital</a></li>
